--- a/references.bib
+++ b/references.bib
@@ -10,3 +10,18 @@
 	number = {1},
 	doi = {10.1198/jcgs.2009.07098}
 }
+
+@article{schwarcz2007,
+	title = {Assessing Representativeness of Sampling Methods for Reaching Men Who Have Sex with Men: A Direct Comparison of Results Obtained from Convenience and Probability Samples},
+	author = {{Schwarcz}, {Sandra} and {Spindler}, {Hilary} and {Scheer}, {Susan} and {Valleroy}, {Linda} and {Lansky}, {Amy}},
+	year = {2007},
+	month = {04},
+	date = {2007-04-11},
+	journal = {AIDS and Behavior},
+	pages = {596},
+	volume = {11},
+	number = {4},
+	doi = {10/ctgppb},
+	url = {https://doi.org/10.1007/s10461-007-9232-9},
+	langid = {en}
+}
