--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,22 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  year = {2021},
+  note = {R package version 2.4.2},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+
+@Manual{R-here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=here},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -23,12 +39,28 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-pacman,
+  title = {pacman: Package Management Tool},
+  author = {Tyler Rinker and Dason Kurkiewicz},
+  year = {2019},
+  note = {R package version 0.5.1},
+  url = {https://github.com/trinker/pacman},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
   note = {R package version 2.11},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
+  year = {2021},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=usethis},
 }
 
 @Book{bookdown2016,
@@ -61,6 +93,15 @@
   year = {2014},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Manual{pacman2018,
+  title = {{pacman}: {P}ackage Management for {R}},
+  author = {Tyler W. Rinker and Dason Kurkiewicz},
+  address = {Buffalo, New York},
+  note = {version 0.5.0},
+  year = {2018},
+  url = {http://github.com/trinker/pacman},
 }
 
 @Book{rmarkdown2018,
