--- a/introduction_overview.Rmd
+++ b/introduction_overview.Rmd
@@ -6,7 +6,36 @@
 
 ## The purpose of this resource
 
-(integrate discussion from Slack thread and readme)
+<!-- (integrate discussion from Slack thread and readme) --> 
+
+A github-hosted 'bookdown' for structured in-depth discussion
+
+\
+
+David Reinstein's conception:
+
+- Don't share any confidential data or sensitive information
+
+\
+
+- Don't feel compelled to flesh out all sections with original content. Don’t add content just because "it’s in a typical syllabus’.
+
+- Focus on things that we use, have used, want to use, or have been requested to address. 
+     - Secondarily, on things relevant to Effective Altruism-related research in general
+- Do curate link, and embed resources from elsewhere
+
+- Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
+
+\
+
+- Do put in content that is more in-depth and technical, or involving R-code and tools
+- Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
+- Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
+
+\
+
+I also hope to use this to develop 'templates and standard practices' for our work
+
 
 ## Sections and organization {#outline_sections}
 (Proposed/discussedbelow -- keep updated with actual structure)
