--- a/packages.bib
+++ b/packages.bib
@@ -23,6 +23,46 @@
   url = {https://CRAN.R-project.org/package=devtools},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2021},
+  note = {R package version 1.0.7},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{R-furrr,
+  title = {furrr: Apply Mapping Functions in Parallel using Futures},
+  author = {Davis Vaughan and Matt Dancho},
+  year = {2021},
+  note = {R package version 0.2.3},
+  url = {https://github.com/DavisVaughan/furrr},
+}
+
+@Manual{R-future,
+  title = {future: Unified Parallel and Distributed Processing in R for Everyone},
+  author = {Henrik Bengtsson},
+  year = {2021},
+  note = {R package version 1.23.0},
+  url = {https://CRAN.R-project.org/package=future},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2021},
+  note = {R package version 3.3.5},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
 @Manual{R-here,
   title = {here: A Simpler Way to Find Your Files},
   author = {Kirill Müller},
@@ -47,12 +87,60 @@
   url = {https://github.com/trinker/pacman},
 }
 
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
   note = {R package version 2.11},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2021},
+  note = {R package version 3.1.6},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.4},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the Tidyverse},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
 @Manual{R-usethis,
@@ -71,6 +159,23 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Misc{future2021,
+  author = {Henrik Bengtsson},
+  title = {A Unifying Framework for Parallel and Distributed Processing in R using Futures},
+  year = {2021},
+  note = {10.32614/RJ-2021-048},
+  url = {https://journal.r-project.org/archive/2021/RJ-2021-048/index.html},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Book{knitr2015,
@@ -122,5 +227,16 @@
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
 }
 
