--- a/modeling.Rmd
+++ b/modeling.Rmd
@@ -1,1 +1,1 @@
-# MODELING, PREDICTION, INFERENCE, AND MACHINE LEARNING {-#modeling}
+# PREDICTION, MACHINE LEARNING, AND 'ML-STYLE MODELING' {-#mlmodeling}
